<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">demo-camera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_back">Back</string>
    <string name="text_result">Result</string>
    
    <string name="btn_camera_photo">Take picture</string>
    <string name="btn_camera_scan">Scan</string>
    <string name="text_scan_code_tips">Please put the barcode in the box</string>
    <string name="text_code_type">Barcode format：</string>
    <string name="text_data_type">Product Name：</string>
    <string name="text_time">Date：</string>
    <string name="text_metadata">Product Color：</string>

</resources>
